Fixing cron_job endpoint in config file

--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
   ],
   "crons": [
     {
-      "path": "/cron_job",
+      "path": "/cron_job_trigger",
       "schedule": "0 0 * * *"
     }
   ]
