--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
   "crons": [
     {
       "path": "/cron_job_trigger",
-      "schedule": "0 0 * * *"
+      "schedule": "*/10 * * * *"
     }
   ]
 }
